tests/baselines/reference/emitArrowFunctionThisCapturing(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
emitArrowFunctionThisCapturing.ts(6,10): error TS2339: Property 'name' does not exist on type 'typeof globalThis'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== emitArrowFunctionThisCapturing.ts (1 errors) ====
    var f1 = () => {
        this.age = 10
    };
    
    var f2 = (x: string) => {
        this.name = x
             ~~~~
!!! error TS2339: Property 'name' does not exist on type 'typeof globalThis'.
    }
    
    function foo(func: () => boolean) { }
    foo(() => {
        this.age = 100;
        return true;
    });
    